--- a/assets/scss/layout/_footer.scss
+++ b/assets/scss/layout/_footer.scss
@@ -2,4 +2,10 @@
 
 .l-footer{
     margin-top: 2rem;
+    > div {
+        width: 150px;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    }
 }
